--- a/index.html
+++ b/index.html
@@ -26,53 +26,52 @@
             <div class="hero-pic">
                 <img src="images/hero.jpg" class="bg" alt="">
                 <img src="images/logo.png" class="logo" alt="">
-                <div class="hero-des"></div>
                 <div class="hero-txt">
                     <h1>Take a <span>Tour</span><br> of a Lifetime</h1>
                     <a href="book.html"><button class="tour">Take a Tour...</button></a>
                     <a href="contact.html"><button class="plus">+</button></a>
                 </div>
             </div>
-        </div>
-        <div class="features-container">
-            <div class="feature f-1">
-                <div class="features-pic">
-                    <img src="images/f1.jpg" alt="">
-                    <div class="ft-pic-des"></div>
-                </div>
-                <div class="f-text">
-                    <h3>Tour like Never Before</h3>
-                    <hr>
-                    <p>Explore and experience London to the fullest with the help of SkyTours. Our staffs priority is
-                        giving the best experience possible to you the tourists.</p>
-                </div>
-            </div>
-            <div class="feature f-2">
-                <div class="features-pic">
-                    <img src="images/f2.jpg" alt="">
-                    <div class="ft-pic-des"></div>
-                </div>
-                <div class="f-text">
-                    <h3>Tour With Family and Friends</h3>
-                    <hr>
-                    <p>We provide tour packages that allow you to take private tours With your family, friends and loved
-                        ones or you can simply tour with other tourists.</p>
-                </div>
-            </div>
-            <div class="feature f-3">
-                <div class="features-pic">
-                    <img src="images/f3.jpg" alt="">
-                    <div class="ft-pic-des"></div>
-                </div>
-                <div class="f-text">
-                    <h3>Royalty Class Accomodation</h3>
-                    <hr>
-                    <p>Rest after each daily experience at some of thr best five star hotels in London with the best
-                        reception and booking services.</p>
-                </div>
-            </div>
-        </div>
+        </div>     
     </header>
+    <div class="features-container">
+        <div class="feature f-1">
+            <div class="features-pic">
+                <img src="images/f1.jpg" alt="">
+                <div class="ft-pic-des"></div>
+            </div>
+            <div class="f-text">
+                <h3>Tour like Never Before</h3>
+                <hr>
+                <p>Explore and experience London to the fullest with the help of SkyTours. Our staffs priority is
+                    giving the best experience possible to you the tourists.</p>
+            </div>
+        </div>
+        <div class="feature f-2">
+            <div class="features-pic">
+                <img src="images/f2.jpg" alt="">
+                <div class="ft-pic-des"></div>
+            </div>
+            <div class="f-text">
+                <h3>Tour With Family and Friends</h3>
+                <hr>
+                <p>We provide tour packages that allow you to take private tours With your family, friends and loved
+                    ones or you can simply tour with other tourists.</p>
+            </div>
+        </div>
+        <div class="feature f-3">
+            <div class="features-pic">
+                <img src="images/f3.jpg" alt="">
+                <div class="ft-pic-des"></div>
+            </div>
+            <div class="f-text">
+                <h3>Royalty Class Accomodation</h3>
+                <hr>
+                <p>Rest after each daily experience at some of thr best five star hotels in London with the best
+                    reception and booking services.</p>
+            </div>
+        </div>
+    </div>
     <div class="parallax-wrapper">
         <img class="bg-p" src="images/beach.jpg" alt="">
         <div class="hover-text fr">
@@ -152,7 +151,7 @@
     </div>
     <footer>
         <div class="footer-img-box">
-            <img src="images/logo.png" alt="">
+            <img src="images/footer-logo.png" alt="">
         </div>
         <div class="footer-links">
             <a href="index.html">Home</a>
