--- a/about.html
+++ b/about.html
@@ -26,77 +26,75 @@
             <div class="hero-pic">
                 <img src="images/hero.jpg" class="bg" alt="">
                 <img src="images/logo.png" class="logo" alt="">
-                <div class="hero-des"></div>
                 <div class="hero-txt">
                     <h1>About <br><span>SkyTours</span></h1>
                 </div>
             </div>
         </div>
-        <section>
-            <h2>About Us</h2>
-            <hr>
-            <p>Here at SkyTours, we help tourists and visitors enjoy a lovely vacation and tour the beautiful city of
-                London. We are a touring agency located at the heart of London, we have a team of experienced tour
-                guides and behind the desk workers to ensure you have the best experience possible. Even though we do
-                not help nor interfere with travel plans or transportation from a foreign country to London but from the
-                moment you step on English soil at the London airport we will fully care for all your needs including
-                transport, accomodation which all the expenses will have been paid for with the original fee and require
-                zero additional spending. Will like your own private tour with your family? try our private tou package.
-                At SkyTours, your comfort is our priority.</p>
-        </section>
-
-        <section>
-            <h2>Our Location</h2>
-            <hr>
-            <div id="googleMap" style="width:100%;height:400px;">
-                <img src="images/maps.png" alt="">
-            </div>
-        </section>
-
-
-
-
-
-
-        <footer>
-            <div class="footer-img-box">
-                <img src="images/logo.png" alt="">
-            </div>
-            <div class="footer-links">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="book.html">Book a Tour</a>
-                <a href="contact.html">Contact</a>
-            </div>
-            <div class="copyright">Copyright &copy; SkyTours</div>
-        </footer>
-        <div class="mobile-nav">
-            <div class="links Home">
-                <a href="index.html">
-                    <span class="icon icon1">&spades;</span>
-                    <span class="span-text">Home</span>
-                </a>
-            </div>
-            <div class="links About">
-                <a href="about.html">
-                    <span class="icon">&clubs;</span>
-                    <span class="span-text">About</span>
-                </a>
-            </div>
-            <div class="links Book">
-                <a href="book.html">
-                    <span class="icon">&hearts;</span>
-                    <span class="span-text">Tour</span>
-                </a>
-            </div>
-            <div class="links Contact">
-                <a href="contact.html">
-                    <span class="icon">&diams;</span>
-                    <span class="span-text">Contact</span>
-                </a>
-            </div>
-        </div>
     </header>
+    <section>
+        <h2>About Us</h2>
+        <hr>
+        <p>Here at SkyTours, we help tourists and visitors enjoy a lovely vacation and tour the beautiful city of
+            London. We are a touring agency located at the heart of London, we have a team of experienced tour
+            guides and behind the desk workers to ensure you have the best experience possible. Even though we do
+            not help nor interfere with travel plans or transportation from a foreign country to London but from the
+            moment you step on English soil at the London airport we will fully care for all your needs including
+            transport, accomodation which all the expenses will have been paid for with the original fee and require
+            zero additional spending. Will like your own private tour with your family? try our private tou package.
+            At SkyTours, your comfort is our priority.</p>
+    </section>
 
+    <section>
+        <h2>Our Location</h2>
+        <hr>
+        <div id="googleMap" style="width:100%;height:400px;">
+            <img src="images/maps.png" alt="">
+        </div>
+    </section>
+
+
+
+
+
+
+    <footer>
+        <div class="footer-img-box">
+            <img src="images/footer-logo.png" alt="">
+        </div>
+        <div class="footer-links">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="book.html">Book a Tour</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <div class="copyright">Copyright &copy; SkyTours</div>
+    </footer>
+    <div class="mobile-nav">
+        <div class="links Home">
+            <a href="index.html">
+                <span class="icon icon1">&spades;</span>
+                <span class="span-text">Home</span>
+            </a>
+        </div>
+        <div class="links About">
+            <a href="about.html">
+                <span class="icon">&clubs;</span>
+                <span class="span-text">About</span>
+            </a>
+        </div>
+        <div class="links Book">
+            <a href="book.html">
+                <span class="icon">&hearts;</span>
+                <span class="span-text">Tour</span>
+            </a>
+        </div>
+        <div class="links Contact">
+            <a href="contact.html">
+                <span class="icon">&diams;</span>
+                <span class="span-text">Contact</span>
+            </a>
+        </div>
+    </div>
 
 </body>
