--- a/contact.html
+++ b/contact.html
@@ -26,65 +26,64 @@
             <div class="hero-pic">
                 <img src="images/hero.jpg" class="bg" alt="">
                 <img src="images/logo.png" class="logo" alt="">
-                <div class="hero-des"></div>
                 <div class="hero-txt">
                     <h1>Contact<br><span>SkyTours</span></h1>
                 </div>
             </div>
         </div>
-        <section>
-            <div class="tour-forms">
-                <div id="private" class="forms">
-                    <form action="mailto:muizfemi2004@gmail.com" method="post">
-                        <label for="fname">Name</label><br>
-                        <input type="text" autofocus autocomplete="off" name="fname"><br>
-                        <label for="lname">Email</label><br>
-                        <input type="email" autocomplete="off" name="lname"><br>
-                        <label for="txt">Your Message</label><br>
-                        <textarea name="txt" id="" cols="30" rows="10"></textarea><br>
-                        <button type="submit">Send</button>
-                    </form>
-                </div>
-            </div>
-        </section>
-
-        <footer>
-            <div class="footer-img-box">
-                <img src="images/logo.png" alt="">
-            </div>
-            <div class="footer-links">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="book.html">Book a Tour</a>
-                <a href="contact.html">Contact</a>
-            </div>
-            <div class="copyright">Copyright &copy; SkyTours</div>
-        </footer>
-        <div class="mobile-nav">
-            <div class="links Home">
-                <a href="index.html">
-                    <span class="icon icon1">&spades;</span>
-                    <span class="span-text">Home</span>
-                </a>
-            </div>
-            <div class="links About">
-                <a href="about.html">
-                    <span class="icon">&clubs;</span>
-                    <span class="span-text">About</span>
-                </a>
-            </div>
-            <div class="links Book">
-                <a href="book.html">
-                    <span class="icon">&hearts;</span>
-                    <span class="span-text">Tour</span>
-                </a>
-            </div>
-            <div class="links Contact">
-                <a href="contact.html">
-                    <span class="icon">&diams;</span>
-                    <span class="span-text">Contact</span>
-                </a>
+    </header>
+    <section>
+        <div class="tour-forms">
+            <div id="private" class="forms">
+                <form action="mailto:muizfemi2004@gmail.com" method="post">
+                    <label for="fname">Name</label><br>
+                    <input type="text" autocomplete="off" name="fname"><br>
+                    <label for="lname">Email</label><br>
+                    <input type="email" autocomplete="off" name="lname"><br>
+                    <label for="txt">Your Message</label><br>
+                    <textarea name="txt" id="" cols="30" rows="10"></textarea><br>
+                    <button type="submit">Send</button>
+                </form>
             </div>
         </div>
-    </header>
+    </section>
+
+    <footer>
+        <div class="footer-img-box">
+            <img src="images/footer-logo.png" alt="">
+        </div>
+        <div class="footer-links">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="book.html">Book a Tour</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <div class="copyright">Copyright &copy; SkyTours</div>
+    </footer>
+    <div class="mobile-nav">
+        <div class="links Home">
+            <a href="index.html">
+                <span class="icon icon1">&spades;</span>
+                <span class="span-text">Home</span>
+            </a>
+        </div>
+        <div class="links About">
+            <a href="about.html">
+                <span class="icon">&clubs;</span>
+                <span class="span-text">About</span>
+            </a>
+        </div>
+        <div class="links Book">
+            <a href="book.html">
+                <span class="icon">&hearts;</span>
+                <span class="span-text">Tour</span>
+            </a>
+        </div>
+        <div class="links Contact">
+            <a href="contact.html">
+                <span class="icon">&diams;</span>
+                <span class="span-text">Contact</span>
+            </a>
+        </div>
+    </div>
 </body>
