--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img src="images/hero.jpg" class="bg" alt="">
                 <img src="images/logo.png" class="logo" alt="">
                 <div class="hero-txt">
-                    <h1>Book the <span>Tour</span><br> of a Lifetime</h1>
+                    <h1>Take the <span>Tour</span><br> of a Lifetime</h1>
                     <a href="book.html"><button class="tour">Take a Tour...</button></a>
                     <a href="contact.html"><button class="plus">+</button></a>
                 </div>
